Lint Java9 deprecated